5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1662_1399.log
== TEST (2019-04-15 15:20:27) 
-- CODE:
AR = int(input("Qtd de votos AR: "))
DO = int(input("Qtd de votos DO: "))
ar = (AR - DO) *
if(AR > DO):
	print("Ambrósio Rutra")
	print(round(ar, 2))
else:
	msg = "Demelza Olecram"
	
-- ERROR:
File "XXXX", line 3
    ar = (AR - DO) *
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:41) 
-- CODE:
AR = int(input("Qtd de votos AR: "))
DO = int(input("Qtd de votos DO: "))
ar = (AR - DO)/100
if(AR > DO):
	print("Ambrósio Rutra")
	print(round(ar, 2))
else:
	msg = "Demelza Olecram"
	
-- OUTPUT:
Ambrósio Rutra
286900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:37) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = A/100
d = D/100
# Condicoes
if(A > D):
	msg = "Ambrósio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
print(msg)
print(round(msg2, 2))
	
-- OUTPUT:
Ambrósio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:56) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = A/100
d = D/100
# Condicoes
if(A > D):
	msg = "Ambrósio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
print(msg)
print(round(msg2, 2))
	
-- OUTPUT:
Ambrósio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:17) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = A/100
d = D/100
# Condicoes
if(A > D):
	msg = "Ambrósio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
print(msg)

	
-- OUTPUT:
Ambrósio Rutra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:50) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = A/100
d = D/100
# Condicoes
if(A > D):
	msg = " Ambrósio Rutra "
	msg2 = a
else:
	msg = " Demelza Olecram "
	msg2 = d
print(msg)

	
-- OUTPUT:
Ambrósio Rutra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:00) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = Ambrosio Rutra
	msg2 = a
else:
	msg = Demelza Olecram
	msg2 = d
# Saidas
print(msg)
print(round(mdg2, 2))

-- ERROR:
File "XXXX", line 7
    msg = Ambrosio Rutra
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:21) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(mdg2, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(mdg2, 2))
NameError: name 'mdg2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:43) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- OUTPUT:
Ambrosio Rutra
5454.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:35:56) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- EXECUTION TIME:
0.14899
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
2222.55
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
0.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:13) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- OUTPUT:
Ambrosio Rutra
5454.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:45) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- OUTPUT:
Ambrosio Rutra
5454.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:37:12) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- EXECUTION TIME:
0.178452
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
2222.55
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
0.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:58) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- OUTPUT:
Ambrosio Rutra
5454.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:38:49) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- EXECUTION TIME:
0.163415
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
2222.55
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
0.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:30) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- OUTPUT:
Ambrosio Rutra
5454.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:48) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/1000000
d = (D * 100)/1000000
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- OUTPUT:
Ambrosio Rutra
5454.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:45:57) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = A * 100
d = D * 100
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- OUTPUT:
Ambrosio Rutra
5454000000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:46:01) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = A * 100
d = D * 100
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- EXECUTION TIME:
0.131812
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
5454000000
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
2222546900
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
800000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:47:06) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = A / 100
d = D / 100
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- EXECUTION TIME:
0.161364
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
545400.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
222254.69
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
80.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:08) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = A / 100
d = D / 100
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- OUTPUT:
Ambrosio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:55) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/ (D + A)
d = (D * 100)/ (D + A)
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:49:06) 
-- CODE:
A = int(input("Qtd de votos AR: "))
D = int(input("Qtd de votos DO: "))
a = (A * 100)/ (D + A)
d = (D * 100)/ (D + A)
# Condicoes
if (A > D):
	msg = "Ambrosio Rutra"
	msg2 = a
else:
	msg = "Demelza Olecram"
	msg2 = d
# Saidas
print(msg)
print(round(msg2, 2))

-- EXECUTION TIME:
0.183749
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
94.66
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
61.54
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
